--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       - "traefik.http.services.react-app.loadbalancer.server.port=80"
     expose:
       - "80"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
 
   traefik:
     image: "traefik:3.1"
